cyborg: fix for navbar on tablets 🔨

--- a/cyborg/_overrides.scss
+++ b/cyborg/_overrides.scss
@@ -79,7 +79,7 @@
     border: 1px solid $grey-darker;
   }
 
-  @include mobile {
+  @include touch {
     .navbar-menu {
       background-color: $navbar-background-color;
     }
